# KiouKifExporter

./: .commitlintrc.yaml  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  control  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  postAttachCommand.sh
.github/: dependabot.yml
.github/workflows/: deployment.yaml  integration.yaml
Sources/KiouKifExporter/: Helpers.m  Hook_MatchModeObserve.m  Internal.h  Kif_Writer.m  Settings.h  Settings.m  Tweak.m
_shared/: kiou_hookengine.h  kiou_il2cpp.h  kiou_logging.h  kiou_logging.m
tests/: test_encode.py
tools/: __init__.py  build_patched_ipa.sh  caves.py  encode.py  machoops.py  patch_info_plist.py  patch_macho.py  patch_plist.py  patch_unity.py  verify_lc_load.py
tools/recipes/: __init__.py  kioukifexporter.py
